# stochastic_process_flows

./: .gitignore  README.md  pyproject.toml  setup.py
notebooks/data/: forecasting_dataloaders.ipynb  forecasting_dataloaders_crypto.ipynb
notebooks/data/gecko/: df_time_series_to_gluonts.ipynb
notebooks/data/kraken/: get_coins.ipynb
notebooks/data/processes/: read_files.ipynb
notebooks/deprecated/: diffusion_sde.ipynb  extended_tutorial_diffusion_ts_transformation.ipynb  forecasting_tsdiff_dataloader.ipynb  gluon_ts.ipynb  pts.ipynb
notebooks/gluon_tutorials/: extended_tutorial.ipynb  howto_pytorch_lightning.ipynb
notebooks/gluon_tutorials/lightning_logs/version_0/: events.out.tfevents.1734000646.DESKTOP-EHGJ1O2.26612.0
notebooks/models/: coin_forward_pass.ipynb  diffusion_sde.ipynb  forward_pass.ipynb
notebooks/models/forecasting/: load_trained_gecko.ipynb  load_trained_module.ipynb
scripts/: basic_tests.py
scripts/forecasting/: experiment.yaml  train.py
scripts/slurm/: training_forecasting.job
scripts/training/: Training.md  train_forecasting.py  train_gecko.py
spflows/: __init__.py
spflows/configs_classes/: forecasting_configs.py  gecko_configs.py  processes_configs.py
spflows/data/: datamodules.py  datasets.py  generate.py
spflows/data/crypto/: timeseries_utils.py  utils.py
spflows/data/crypto/coingecko/: coingecko_dataclasses.py  dataloaders.py  downloads.py  main_download.py  metadata_postprocessing.py  timeseries_preprocessing.py  utils.py
spflows/data/deprecated/: gecko_metadata_deprecated.py
spflows/data/deprecated/coingecko/: coingecko_dataclasses.py  dataloaders.py  downloads.py  downloads_utils.py  metadata_postprocessing.py  timeseries_preprocessing.py  timeseries_utils.py  utils.py
spflows/data/gecko/: gecko_datasets.py  gecko_metadata.py  gecko_requests.py  gecko_utils.py
spflows/data/generate/: stochastic_process.py
spflows/data/processes/: processes_dataset.py  processes_utils.py
spflows/diffusion/: continuous_diffusion.py  discrete_diffusion.py
spflows/forecasting/: experiment.py  train.py
spflows/forecasting/models/: abstract_models.py  blocks.py  score_estimator.py  time_grad_network.py
spflows/forecasting/models/crypto/: README  TODO  abstract_trainers.py
spflows/forecasting/models/deep_architectures/: deep_nets.py  lstms.py
spflows/forecasting/models/m5/: embeddings.py  filters.py  predictors.py
spflows/forecasting/models/sdes/: neural_sde.py  plots.py  queues.py  utils.py
spflows/forecasting/models/utils/: experiment_files_classes.py
spflows/models/: abstract_models.py
spflows/models/architectures/: encoders.py  tcn.py
spflows/models/crypto/portfolio_selection/: birth_stats.py  portfolio.py  (+3 more)
spflows/models/diffusion/: continuous_diffusion.py  discrete_diffusion.py
spflows/models/forecasting/: __init__.py  score_estimator.py  score_lightning.py  score_network.py  time_grad_network.py
spflows/models/utils/: basic_setups.py
spflows/test/: test_beta_scheduler.py  test_ddpm.py
spflows/training/: TrainingReadme.md  basic.py  basic_experiments.py  forecasting_experiments.py  gecko_experiments.py
spflows/utils/: epsilon_theta.py  experiment_files.py  trainer.py  weird_functions.py
test/: test_sde_diffusion.py
test/data/: test_forecasting.py
tests/data/: test_coingecko.py  test_forecasting_datamodules.py  test_processes.py
tests/models/: test_forecasting_models.py
(+20 files in other folders)
