[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[project]
name = "spflows"
version = "0.1.0"
description = "Stochastic Process FLows"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
   { name = "Cesar Ali Ojeda", email = "ojedamarin@uni-potsdam.de" }
]
license = { file = "LICENSE.txt" }
requires-python = ">=3.11.9"
dependencies = [
    "numpy==1.26.3",
    "pytest==8.3.4",
    "scipy==1.14.1",
    "pytorch-lightning==2.4.0",
    "torchdiffeq==0.2.5",
    "torchsde==0.2.6",
    "matplotlib==3.9.3",
    "pytorchts==0.6.0",
    "gluonts==0.16.0",
    "wget==3.2",
    "torchtyping==0.1.5",
    "pandas==1.5.3",
    "optuna==4.1.0",
    "torchcde==0.2.5",
    "orjson==3.10.12",
    "mlflow==2.19.0"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
ignore = ["F401", "F403", "F405"]
line-length = 140

[tool.ruff.lint]
ignore = ["C901", "E501", "E741", "F402", "F823", "I001"]
select = ["C", "E", "F", "I", "W"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pylint]
disable = [
   "C0103",  # Invalid variable name
   "C0114",  # Missing module docstring
]
max-line-length = 140
